# leopard-codec

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
go-leopard/: Cargo.toml  build.rs
go-leopard/go/: go.mod  go.sum  leopard.go
go-leopard/src/: lib.rs
src/: align.rs  lib.rs  lut.rs  utils.rs
test_data/: encode-ff8-1-64-input  encode-ff8-1-64-output  encode-ff8-100-128-input  encode-ff8-100-128-output  expected_mul_lut.rs  ifft-encoder-input  ifft-encoder-output
