[package]
name = "leopard-codec"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
lazy_static = "1.4"
thiserror = "1"

[dev-dependencies]
go-leopard = { path = "go-leopard" }
proptest = "1.4.0"
rand = "0.8"
test-strategy = "0.3"

[workspace]
members = ["go-leopard"]

[profile.test]
opt-level = 3
