[package]
name = "leopard-codec"
version = "0.1.0"
edition = "2021"
authors = ["Eiger <hello@eiger.co>"]
description = "Implementation of Reed-Solomon codes using leopard algorithm"
license = "Apache-2.0"
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/leopard-codec"
readme = "README.md"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["reed-solomon", "erasure", "leopard"]
# Must be one of <https://crates.io/category_slugs>
categories = ["encoding"]

[dependencies]
bytes = "1.5"
lazy_static = "1.4"
thiserror = "1"

[dev-dependencies]
go-leopard = { path = "go-leopard" }
proptest = "1.4.0"
rand = "0.8"
test-strategy = "0.3"

[workspace]
members = ["go-leopard"]

[profile.test]
opt-level = 3
