[package]
name = "leopard-codec"
version = "0.1.0"
edition = "2021"
authors = ["Eiger <hello@eiger.co>"]
description = "Implementation of Reed-Solomon codes using leopard algorithm"
license = "Apache-2.0"
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/leopard-codec"
readme = "README.md"
rust-version = "1.80"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["reed-solomon", "erasure", "leopard"]
# Must be one of <https://crates.io/category_slugs>
categories = ["encoding"]

[dependencies]
bytes = "1"
thiserror = "2"

[dev-dependencies]
go-leopard = { path = "go-leopard" }
proptest = "1"
rand = "0.9"
test-strategy = "0.4"

[workspace]
members = ["go-leopard"]

[profile.test]
opt-level = 3
